--- a/deamanagement/src/main/resources/application.properties
+++ b/deamanagement/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port=8082
 
+spring.datasource.url=jdbc:mysql://localhost/dea_management?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=Surf170418.!
+spring.datasource.platform=mysql
