semana3: usuario e paginacao e update db

--- a/deamanagement/src/main/resources/application.properties
+++ b/deamanagement/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 server.port=8082
 
+server.servlet.contextPath=/dea-management-api
+
+spring.jpa.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 spring.datasource.url=jdbc:mysql://localhost/dea_management?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=Surf170418.!
+spring.datasource.password=senha123
 spring.datasource.platform=mysql
