--- a/deamanagement/src/main/resources/application.properties
+++ b/deamanagement/src/main/resources/application.properties
@@ -5,6 +5,10 @@ server.servlet.contextPath=/dea-management-api
 spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+
+spring.jpa.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 spring.datasource.url=jdbc:mysql://localhost/dea_management?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=senha123
