--- a/deamanagement/src/main/resources/application-test.properties
+++ b/deamanagement/src/main/resources/application-test.properties
@@ -1,1 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost/dea_management_test?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=senha123
+spring.datasource.platform=mysql
