--- a/deamanagement/src/main/resources/application-test.properties
+++ b/deamanagement/src/main/resources/application-test.properties
@@ -1,4 +1,1 @@
-spring.datasource.url=jdbc:mysql://localhost/dea_management_test?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=senha123
-spring.datasource.platform=mysql
+spring.jpa.hibernate.ddl-auto=update
